--- a/webpage2.html
+++ b/webpage2.html
@@ -1,66 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>
-   Shop Products
-  </title>
-  <link href="Static/web2style.css" rel="stylesheet"/>
- </head>
- <body>
-  <header>
-   <h1>
-    Shop Products
-   </h1>
-  </header>
-  <div class="filter-menu">
-   <h2>
-    Filter
-   </h2>
-   <label for="category-filter">
-    Category:
-   </label>
-   <select id="category-filter">
-    <option value="all">
-     All
-    </option>
-    <option value="Men">
-     Men
-    </option>
-    <option value="Women">
-     Women
-    </option>
-   </select>
-  </div>
-  <div class="product-list">
-   <div class="product">
-    <img src="C:\Users\anya0\OneDrive\Desktop\images\w1.jpg"/>
-    <h3>
-     Brown Chappal
-    </h3>
-    <p>
-     Price: INR 2000
-    </p>
-   </div>
-   <div class="product">
-    <img src="C:\Users\anya0\OneDrive\Desktop\images\m2.jpg"/>
-    <h3>
-     Senapati Kapshi
-    </h3>
-    <p>
-     Price: INR 2500
-    </p>
-   </div>
-   <div class="product">
-    <img src="C:\Users\anya0\OneDrive\Desktop\images\m3.jpg"/>
-    <h3>
-     Brown Kapshi
-    </h3>
-    <p>
-     Price: INR 2750
-    </p>
-   </div>
-  </div>
- </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shop Products</title>
+    <link rel="stylesheet" href="web2style.css">
+</head>
+<body>
+    <header>
+        <h1>Shop Products</h1>
+    </header>
+    <div class="filter-menu">
+        <h2>Filter</h2>
+        <label for="category-filter">Category:</label>
+        <select id="category-filter">
+            <option value="all">All</option>
+            <option value="Men">Men</option>
+            <option value="Women">Women</option>
+        </select>
+    </div>
+    <div class="product-list">
+        <div class="product">
+            <img src="C:\Users\anya0\OneDrive\Desktop\images\w1.jpg">
+            <h3>Brown Chappal</h3>
+            <p>Price: INR 2000 </p>
+        </div>
+        <div class="product">
+            <img src="C:\Users\anya0\OneDrive\Desktop\images\m2.jpg">
+            <h3>Senapati Kapshi</h3>
+            <p>Price: INR 2500</p>
+        </div>
+        <div class="product">
+            <img src="C:\Users\anya0\OneDrive\Desktop\images\m3.jpg">
+            <h3>Brown Kapshi</h3>
+            <p>Price: INR 2750</p>
+        </div>
+    </div>
+</body>
 </html>
