--- a/index.html
+++ b/index.html
@@ -1,158 +1,117 @@
 <!DOCTYPE html>
+
 <html>
 <head>
-	<title>Kolhapuri Chappal</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+<title>ShopKolhapuriCraft - Authentic Crafts</title>
+<link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <header id="home">
-	<nav>
-		<div class="logo">ShopKolhapuriCraft</div>
-		<div class="menu">
-			<a href="#home">Home</a>
-			<a href="#featured">Featured</a>
-			<a href="#man">Man</a>
-			<a href="#women">Women</a>
-			<a href="file:///C:/Users/anya0/OneDrive/Desktop/navya/nift/sem%205/ds%202/html/webpage2.html">Shop</a>
-		</div>
-	</nav>
-
 <div class="container">
-	<div class="left">
-		<img src="images/s1.jpg">
-	</div>
-
-
-
-	<div class="right">
-		<h1>Best Festival Offers</h1>
-		<p>
-			Explore our diverse range of Kolhapuri Chappals, available in various designs, colors, and sizes for both men and women.
-		</p>
-		<p>
-			50% Discount!!!
-		</p>
-		<button><a href="file:///C:/Users/anya0/OneDrive/Desktop/navya/nift/sem%205/ds%202/html/webpage.html">View Product Gallery</a></button><br>
-                <a href="https://www.facebook.com"> 
-		<img src="images/icon.png"></a>
-	</div>
+<div class="logo">
+<a href="#home" style="font-size: 36px;">ShopKolhapuriCraft</a>
+</div>
+<nav class="main-nav">
+<a href="#home" style="font-size: 24px;">Home</a>
+<a href="#featured" style="font-size: 24px;">Featured</a>
+<a href="#man" style="font-size: 24px;">Men</a>
+<a href="#women" style="font-size: 24px;">Women</a>
+<a href="webpage2.html" style="font-size: 24px;">Shop</a>
+</nav>
 </div>
 </header>
 <section id="featured">
-	<h1>Featured</h1>
-	<div class="wrapper">
-	<div class="box1">
-		<img src="images/s1.jpg">
-		<div class="price">Price: INR 4,000 </div>
-	</div>
-		<div>
-		<img src="images/w1.jpg">
-		<div class="price">Price: INR 2,000 </div>
-	</div>
-		<div>
-		<img src="images/w4.jpg">
-		<div class="price">Price: INR 1,850 </div>
-	</div>
-		<div>
-		<img src="images/m2.jpg">
-		<div class="price">Price: INR 2,500 </div>
-	</div>
-		<div>
-		<img src="images/m4.jpg">
-		<div class="price">Price: INR 1,850 </div>
-	</div>
+<h1>Featured</h1>
+<div class="wrapper">
+<div class="box1">
+<img src="images/s1.jpg"/>
+<div class="price">Price: INR 4,000 </div>
+</div>
+<div>
+<img src="images/w1.jpg"/>
+<div class="price">Price: INR 2,000 </div>
+</div>
+<div>
+<img src="images/w4.jpg"/>
+<div class="price">Price: INR 1,850 </div>
+</div>
+<div>
+<img src="images/m2.jpg"/>
+<div class="price">Price: INR 2,500 </div>
+</div>
+<div>
+<img src="images/m4.jpg"/>
+<div class="price">Price: INR 1,850 </div>
+</div>
 </div>
 </section>
-
-
 <section id="man">
-	<div class="man-row">
-		<div class="man-box">
-			<img src="images/s1.jpg">
-				<h2>Brown Leather Chappal <br> INR 4000 </h2>
-			<h3>Add to cart </h3>
-		</div>
-		<div class="man-box">
-			<img src="images/m2.jpg">
-				<h2>Senapati Kapshi <br> INR 2500 </h2>
-			<h3>Add to cart </h3>
-		</div>
-		<div class="man-box">
-			<img src="images/m3.jpg">
-				<h2>Brown Kapshi<br> INR 2750 </h2>
-			<h3>Add to cart </h3>
-		</div>
-		<div class="man-box">
-			<img src="images/m4.jpg">
-				<h2>Light Brown Kapshi<br>INR 3250</h2>
-			<h3>Add to cart </h3>
-		</div>
-		<div class="man-box">
-			<img src="images/m6.jpg">
-				<h2>Beige Kolhapuri<br> INR 1950</h2>
-			<h3>Add to cart </h3>
-		</div>
-	</div>
+<div class="man-row">
+<div class="man-box">
+<img src="images/s1.jpg"/>
+<h2>Brown Leather Chappal <br/> INR 4000 </h2>
+<h3>Add to cart </h3>
+</div>
+<div class="man-box">
+<img src="images/m2.jpg"/>
+<h2>Senapati Kapshi <br/> INR 2500 </h2>
+<h3>Add to cart </h3>
+</div>
+<div class="man-box">
+<img src="images/m3.jpg"/>
+<h2>Brown Kapshi<br/> INR 2750 </h2>
+<h3>Add to cart </h3>
+</div>
+<div class="man-box">
+<img src="images/m4.jpg"/>
+<h2>Light Brown Kapshi<br/>INR 3250</h2>
+<h3>Add to cart </h3>
+</div>
+<div class="man-box">
+<img src="images/m6.jpg"/>
+<h2>Beige Kolhapuri<br/> INR 1950</h2>
+<h3>Add to cart </h3>
+</div>
+</div>
 </section>
-
-
-
-
-
-
-
-
-
 <section id="women">
-
-	<div class="man-row">
-		<div class="man-box">
-			<img src="images/w1.jpg">
-				<h2>Brown Chappal<br>INR 2000</h2>
-			<h3>Add to cart </h3>
-		</div>
-		<div class="man-box">
-			<img src="images/w2.jpg">
-				<h2>Kapshi Chappal<br>INR 2500</h2>
-			<h3>Add to cart </h3>
-		</div>
-		<div class="man-box">
-			<img src="images/w3.jpg">
-				<h2>Light Beige Chappal<br>INR 1950</h2>
-			<h3>Add to cart </h3>
-		</div>
-		<div class="man-box">
-			<img src="images/w4.jpg">
-				<h2>Beige Chappal<br>INR 1850</h2>
-			<h3>Add to cart </h3>
-		</div>
-	</div>
+<div class="man-row">
+<div class="man-box">
+<img src="images/w1.jpg"/>
+<h2>Brown Chappal<br/>INR 2000</h2>
+<h3>Add to cart </h3>
+</div>
+<div class="man-box">
+<img src="images/w2.jpg"/>
+<h2>Kapshi Chappal<br/>INR 2500</h2>
+<h3>Add to cart </h3>
+</div>
+<div class="man-box">
+<img src="images/w3.jpg"/>
+<h2>Light Beige Chappal<br/>INR 1950</h2>
+<h3>Add to cart </h3>
+</div>
+<div class="man-box">
+<img src="images/w4.jpg"/>
+<h2>Beige Chappal<br/>INR 1850</h2>
+<h3>Add to cart </h3>
+</div>
+</div>
 </section>
-
-
-
-
 <section id="footer">
-	<h2><a href="file:///C:/Users/anya0/OneDrive/Desktop/navya/nift/sem%205/ds%202/html/signup.html" alt="click here"> Signup for Newsletter </a></h2>
-
-        <a href="https://www.facebook.com"> 
-	<img src="images/icon.png"></a>
+<h2><a alt="click here" href="file:///C:/Users/anya0/OneDrive/Desktop/navya/nift/sem%205/ds%202/html/signup.html"> Signup for Newsletter </a></h2>
+<a href="https://www.facebook.com">
+<img src="images/icon.png"/></a>
 </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<section id="products">
+<h1>Our Products</h1>
+<div class="product-grid">
+<!-- Product items will go here -->
+</div>
+<div class="product-list">
+<!-- Product items will go here -->
+</div>
+</section>
 </body>
 </html>
