--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
 <a href="https://www.facebook.com">
 <img src="images/icon.png"/></a>
 </section>
-
 <section id="products">
 <h1>Our Products</h1>
 <div class="product-grid">
@@ -112,6 +111,20 @@
 <div class="product-list">
 <!-- Product items will go here -->
 </div>
+</section>
+
+<section id="products">
+<hr/>
+<h2>Featured Products</h2>
+<hr/>
+<div class="product-grid">
+<!-- Product items will go here -->
+<div class="product-item">Product 1</div>
+<div class="product-item">Product 2</div>
+<div class="product-item">Product 3</div>
+<div class="product-item">Product 4</div>
+</div>
+<hr/>
 </section>
 </body>
 </html>
