--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 <header id="home">
 <div class="container">
 <div class="logo">
-<a href="#home" style="font-size: 36px;">ShopKolhapuriCraft</a>
+<a href="#home">ShopKolhapuriCraft</a>
 </div>
 <nav class="main-nav">
-<a href="#home" style="font-size: 24px;">Home</a>
-<a href="#featured" style="font-size: 24px;">Featured</a>
-<a href="#man" style="font-size: 24px;">Men</a>
-<a href="#women" style="font-size: 24px;">Women</a>
-<a href="webpage2.html" style="font-size: 24px;">Shop</a>
+<a href="#home">Home</a>
+<a href="#featured">Featured</a>
+<a href="#man">Men</a>
+<a href="#women">Women</a>
+<a href="webpage2.html">Shop</a>
+<a href="#cart"><img alt="Cart" src="./Static/cart-icon.png"/></a>
 </nav>
 </div>
 </header>
@@ -112,7 +113,6 @@
 <!-- Product items will go here -->
 </div>
 </section>
-
 <section id="products">
 <hr/>
 <h2>Featured Products</h2>
@@ -125,6 +125,23 @@
 <div class="product-item">Product 4</div>
 </div>
 <hr/>
+</section>
+
+<section id="products">
+<h2>Featured Footwear</h2>
+<div class="product-grid">
+<div class="product-item">
+<img alt="Product 1" src="./Static/product1.jpg"/>
+<h3>Product 1</h3>
+<p>$49.99</p>
+</div>
+<div class="product-item">
+<img alt="Product 2" src="./Static/product2.jpg"/>
+<h3>Product 2</h3>
+<p>$59.99</p>
+</div>
+<!-- More products can be added here -->
+</div>
 </section>
 </body>
 </html>
