--- a/index.html
+++ b/index.html
@@ -1,147 +1,112 @@
 <!DOCTYPE html>
-
 <html>
 <head>
-<title>ShopKolhapuriCraft - Authentic Crafts</title>
-<link href="style.css" rel="stylesheet" type="text/css"/>
+    <title>Kolhapuri Craft</title>
+    <link rel="stylesheet" type="text/css" href="styles1.css">
 </head>
 <body>
-<header id="home">
-<div class="container">
-<div class="logo">
-<a href="#home">ShopKolhapuriCraft</a>
-</div>
-<nav class="main-nav">
-<a href="#home">Home</a>
-<a href="#featured">Featured</a>
-<a href="#man">Men</a>
-<a href="#women">Women</a>
-<a href="webpage2.html">Shop</a>
-<a href="#cart"><img alt="Cart" src="./Static/cart-icon.png"/></a>
-</nav>
-</div>
-</header>
-<section id="featured">
-<h1>Featured</h1>
-<div class="wrapper">
-<div class="box1">
-<img src="images/s1.jpg"/>
-<div class="price">Price: INR 4,000 </div>
-</div>
-<div>
-<img src="images/w1.jpg"/>
-<div class="price">Price: INR 2,000 </div>
-</div>
-<div>
-<img src="images/w4.jpg"/>
-<div class="price">Price: INR 1,850 </div>
-</div>
-<div>
-<img src="images/m2.jpg"/>
-<div class="price">Price: INR 2,500 </div>
-</div>
-<div>
-<img src="images/m4.jpg"/>
-<div class="price">Price: INR 1,850 </div>
-</div>
-</div>
-</section>
-<section id="man">
-<div class="man-row">
-<div class="man-box">
-<img src="images/s1.jpg"/>
-<h2>Brown Leather Chappal <br/> INR 4000 </h2>
-<h3>Add to cart </h3>
-</div>
-<div class="man-box">
-<img src="images/m2.jpg"/>
-<h2>Senapati Kapshi <br/> INR 2500 </h2>
-<h3>Add to cart </h3>
-</div>
-<div class="man-box">
-<img src="images/m3.jpg"/>
-<h2>Brown Kapshi<br/> INR 2750 </h2>
-<h3>Add to cart </h3>
-</div>
-<div class="man-box">
-<img src="images/m4.jpg"/>
-<h2>Light Brown Kapshi<br/>INR 3250</h2>
-<h3>Add to cart </h3>
-</div>
-<div class="man-box">
-<img src="images/m6.jpg"/>
-<h2>Beige Kolhapuri<br/> INR 1950</h2>
-<h3>Add to cart </h3>
-</div>
-</div>
-</section>
-<section id="women">
-<div class="man-row">
-<div class="man-box">
-<img src="images/w1.jpg"/>
-<h2>Brown Chappal<br/>INR 2000</h2>
-<h3>Add to cart </h3>
-</div>
-<div class="man-box">
-<img src="images/w2.jpg"/>
-<h2>Kapshi Chappal<br/>INR 2500</h2>
-<h3>Add to cart </h3>
-</div>
-<div class="man-box">
-<img src="images/w3.jpg"/>
-<h2>Light Beige Chappal<br/>INR 1950</h2>
-<h3>Add to cart </h3>
-</div>
-<div class="man-box">
-<img src="images/w4.jpg"/>
-<h2>Beige Chappal<br/>INR 1850</h2>
-<h3>Add to cart </h3>
-</div>
-</div>
-</section>
-<section id="footer">
-<h2><a alt="click here" href="file:///C:/Users/anya0/OneDrive/Desktop/navya/nift/sem%205/ds%202/html/signup.html"> Signup for Newsletter </a></h2>
-<a href="https://www.facebook.com">
-<img src="images/icon.png"/></a>
-</section>
-<section id="products">
-<h1>Our Products</h1>
-<div class="product-grid">
-<!-- Product items will go here -->
-</div>
-<div class="product-list">
-<!-- Product items will go here -->
-</div>
-</section>
-<section id="products">
-<hr/>
-<h2>Featured Products</h2>
-<hr/>
-<div class="product-grid">
-<!-- Product items will go here -->
-<div class="product-item">Product 1</div>
-<div class="product-item">Product 2</div>
-<div class="product-item">Product 3</div>
-<div class="product-item">Product 4</div>
-</div>
-<hr/>
-</section>
 
-<section id="products">
-<h2>Featured Footwear</h2>
-<div class="product-grid">
-<div class="product-item">
-<img alt="Product 1" src="./Static/product1.jpg"/>
-<h3>Product 1</h3>
-<p>$49.99</p>
-</div>
-<div class="product-item">
-<img alt="Product 2" src="./Static/product2.jpg"/>
-<h3>Product 2</h3>
-<p>$59.99</p>
-</div>
-<!-- More products can be added here -->
-</div>
-</section>
+    <!-- Navigation Bar -->
+    <nav>
+        <h1>Kolhapuri Craft</h1>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#featured">Featured</a></li>
+            <li><a href="#men">Men</a></li>
+            <li><a href="#women">Women</a></li>
+        </ul>
+    </nav>
+
+    <!-- Home Section -->
+    <section id="home" class="box">
+        <!-- Home page content can go here -->
+    </section>
+
+    <!-- Featured Products -->
+    <section id="featured" class="box">
+        <h2>Featured</h2>
+        <div class="product">
+            <img src="images/s1.jpg" alt="Featured 1">
+            <p>Price: ₹3500</p>
+        </div>
+        <div class="product">
+            <img src="images/s2.jpg" alt="Featured 2">
+            <p>Price: ₹3750</p>
+        </div>
+        <div class="product">
+            <img src="images/s3.jpg" alt="Featured 3">
+            <p>Price: ₹4000</p>
+        </div>
+        <div class="product">
+            <img src="images/s4.jpg" alt="Featured 4">
+            <p>Price: ₹4250</p>
+        </div>
+        <div class="product">
+            <img src="images/s5.jpg" alt="Featured 5">
+            <p>Price: ₹4500</p>
+        </div>
+    </section>
+
+    <!-- Men's Products -->
+    <section id="men" class="box">
+        <h2>Men</h2>
+        <div class="product">
+            <img src="images/m1.jpg" alt="Men 1">
+            <p>Price: ₹2800</p>
+        </div>
+        <div class="product">
+            <img src="images/m2.jpg" alt="Men 2">
+            <p>Price: ₹2900</p>
+        </div>
+        <div class="product">
+            <img src="images/m3.jpg" alt="Men 3">
+            <p>Price: ₹3000</p>
+        </div>
+        <div class="product">
+            <img src="images/m4.jpg" alt="Men 4">
+            <p>Price: ₹3100</p>
+        </div>
+    </section>
+
+    <!-- Women's Products -->
+    <section id="women" class="box">
+        <h2>Women</h2>
+        <div class="product">
+            <img src="images/w1.jpg" alt="Women 1">
+            <p>Price: ₹4200</p>
+        </div>
+        <div class="product">
+            <img src="images/w2.jpg" alt="Women 2">
+            <p>Price: ₹4300</p>
+        </div>
+        <div class="product">
+            <img src="images/w3.jpg" alt="Women 3">
+            <p>Price: ₹4400</p>
+        </div>
+        <div class="product">
+            <img src="images/w4.jpg" alt="Women 4">
+            <p>Price: ₹4500</p>
+        </div>
+    </section>
+
+    <!-- Shop Section -->
+    <section id="shop" class="box">
+        <!-- Shop content can go here -->
+    </section>
+
+    <!-- Cart Section -->
+    <section id="cart" class="box">
+        <!-- Cart content can go here -->
+    </section>
+
+    <!-- Newsletter Signup -->
+    <section id="newsletter" class="box">
+        <h2>Signup for Newsletter</h2>
+        <form>
+            <input type="email" placeholder="Enter your email">
+            <button type="submit">Subscribe</button>
+        </form>
+    </section>
+
 </body>
 </html>
